svg clipping fix on mobile

--- a/components/works/works.module.scss
+++ b/components/works/works.module.scss
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 1rem;
-    padding-block: 1rem;
+    padding-block: 2.5rem;
 
     @media (min-width:1100px) {
         grid-template-columns: repeat(auto-fit, minmax(800px, 1fr));
@@ -93,8 +93,8 @@
 
     svg {
         position: absolute;
-        right: 0.5rem;
-        top: 1rem;
+        right: 0.4rem;
+        top: 0.4rem;
         max-width: 1rem;
         transition: 0.2s ease-in-out;
     }
